<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="incCommDisplayStates" Id="{61988cbb-0a0e-4246-a040-9f2fd2cf8279}">
    <Declaration><![CDATA[{attribute 'qualified_only'}

TYPE incCommDisplayStates :
(
	
	dStStartingUp   := 10,
	dStStandBy,
	dStIncModeSignalsError,
	dStWaitForAllStatinsReady,
	dStDialTableIndexPermition,
	dStDialTableIndexReady,
	dStStationIsStopped,
	dStWaitForNextStep
	
	
	
)DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>